# advertising_ads_framework

./: BUILD.gn  README.en.md  README.md  README_zh.md  advertising.gni  advertising_README.md  bundle.json
common/: BUILD.gn
common/error_code/: ad_inner_error_code.h
common/ipc/include/: ad_load_callback_stub.h  ad_load_proxy.h  ad_request_body_stub.h  iad_load_callback.h  iad_load_proxy.h  iad_request_body.h
common/ipc/src/: ad_load_callback_stub.cpp  ad_load_proxy.cpp  ad_request_body_stub.cpp
common/log/include/: ad_hilog_wreapper.h
common/model/include/: ad_constant.h  request_data.h
common/model/src/: request_data.cpp
common/utils/include/: ad_common_util.h  ad_json_util.h
common/utils/src/: ad_common_util.cpp  ad_json_util.cpp
etc/init/: BUILD.gn  advertisingservice.cfg
frameworks/cj/ffi/ads/: BUILD.gn
frameworks/cj/ffi/ads/include/: cj_advertising_common.h  cj_advertising_error.h  cj_advertising_ffi.h  cj_advertising_impl.h  cj_advertising_load_service.h
frameworks/cj/ffi/ads/src/: cj_advertising_common.cpp  cj_advertising_ffi.cpp  cj_advertising_impl.cpp  cj_advertising_load_service.cpp
frameworks/js/napi/adcomponent/: BUILD.gn  adcomponent.cpp  adcomponent.js
frameworks/js/napi/ads/: BUILD.gn
frameworks/js/napi/ads/include/: ad_init.h  ad_load_napi_common.h  ad_load_service.h  ad_napi_common_error.h  advertising.h
frameworks/js/napi/ads/resource/: ad_service_config.json
frameworks/js/napi/ads/src/: ad_init.cpp  ad_load_napi_common.cpp  ad_load_service.cpp  ad_napi_common_error.cpp  advertising.cpp  advertising.js
frameworks/js/napi/adsservice_extension_ability/: BUILD.gn  adsservice_extension.js  adsservice_extension_module.cpp
frameworks/js/napi/adsservice_extension_context/: BUILD.gn  adsservice_extension_context.js  adsservice_extension_context_module.cpp
frameworks/js/napi/autoadcomponent/: BUILD.gn  autoadcomponent.cpp  autoadcomponent.js
frameworks/js/napi/extension/: BUILD.gn
frameworks/js/napi/extension/include/: adsservice_extension.h  adsservice_extension_context.h  adsservice_extension_module_loader.h  js_adsservice_extension.h  js_adsservice_extension_context.h
frameworks/js/napi/extension/src/: adsservice_extension.cpp  adsservice_extension_context.cpp  adsservice_extension_module_loader.cpp  js_adsservice_extension.cpp  js_adsservice_extension_context.cpp
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: ad_service_client.h  ad_service_proxy.h  advertising_service_ipc_interface_code.h
interfaces/innerkits/src/: ad_service_client.cpp  ad_service_proxy.cpp
patches/: patches.json
sa_profile/: 6104.json  BUILD.gn
services/: BUILD.gn
services/advertising_manager/include/: ad_load_callback_proxy.h  ad_service.h  ad_service_interface.h  ad_service_stub.h
services/advertising_manager/resource/: ad_service_config.json
services/advertising_manager/src/: ad_load_callback_proxy.cpp  ad_service.cpp  ad_service_proxy.cpp  ad_service_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/advertising_fuzzer/: BUILD.gn  advertising_fuzzer.cpp  advertising_fuzzer.h
