# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//domains/cloud/advertising/advertising.gni")

group("advertising_native_packages") {
    deps = [
      "etc/init:advertisingservice.cfg",
      "interfaces/innerkits:ads_inner",
      "frameworks/js/napi/ads:advertising",
      "frameworks/js/napi/adcomponent:adcomponent",
      "frameworks/js/napi/autoadcomponent:autoadcomponent",
      "sa_profile:cloud_advertising_sa_profiles",
      "services:advertising_service",
      "services:ad_service_config_json",
    ]
}

group("ad_build_fuzztest") {
  testonly = true
  deps = []
  deps += [
    "${advertising_root_path}/test/fuzztest:fuzztest"
  ]
}
