# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//domains/advertising/advertising/advertising.gni")

group("advertising_native_packages") {
  deps = [
    "frameworks/js/napi/adcomponent:adcomponent",
    "frameworks/js/napi/ads:ad_service_config_json",
    "frameworks/js/napi/ads:advertising",
    "frameworks/js/napi/adsservice_extension_ability:adsserviceextensionability_napi",
    "frameworks/js/napi/adsservice_extension_context:adsserviceextensioncontext_napi",
    "frameworks/js/napi/autoadcomponent:autoadcomponent",
    "frameworks/js/napi/extension:adsservice_extension_module",
    "frameworks/js/napi/extension:libadsservice_extension",
  ]
}

group("advertising_ffi_packages") {
  deps = [ "frameworks/cj/ffi/ads:cj_advertising_ffi" ]
}
