# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

aafwk_inner_api_path =
    "//foundation/ability/ability_runtime/interfaces/inner_api"

aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/native"

advertising_root_path = "//domains/cloud/advertising"

advertising_service_path = "${advertising_root_path}/services"

advertising_common_path = "${advertising_root_path}/common"

ability_base_path = "//foundation/ability/ability_base"

ability_base_kits_path = "${ability_base_path}/interfaces/kits/native"



