# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/advertising/advertising/advertising.gni")

config("common_config") {
  include_dirs = [
    "utils/include",
    "error_code",
    "ipc/include",
    "log/include",
    "model/include",
  ]
}

ohos_source_set("advertising_common") {
  branch_protector_ret = "pac_ret"

  configs = [ ":common_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "ipc/src/ad_load_callback_stub.cpp",
    "ipc/src/ad_load_proxy.cpp",
    "ipc/src/ad_request_body_stub.cpp",
    "model/src/request_data.cpp",
    "utils/src/ad_common_util.cpp",
    "utils/src/ad_json_util.cpp",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utilsbase",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",

  ]

  part_name = "advertising"
}
