# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/cloud/advertising/advertising.gni")
import("//build/ohos.gni")

config("ads_inner_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${advertising_common_path}/error_code",
    "${advertising_common_path}/ipc/include",
    "${advertising_common_path}/log/include",
    "${advertising_common_path}/model/include",
  ]
}

ohos_shared_library("ads_inner") {
  sources = [
    "src/ad_service_client.cpp",
    "src/ad_service_proxy.cpp",
  ]

  public_configs = [ ":ads_inner_config" ]
  deps = [
    "${advertising_common_path}:advertising_common",
  ]
  external_deps = [
    "ability_runtime:ability_manager",
    "hilog:libhilog",
    "c_utils:utilsbase",
  ]
  part_name = "advertising"
  subsystem_name = "advertising"
}
