# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/cloud/advertising/advertising.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "advertising/advertising"

##############################fuzztest##########################################
ohos_fuzztest("AdvertisingFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "${advertising_root_path}/test/fuzztest/advertising_fuzzer"
  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "advertising_fuzzer.cpp" ]

  deps = [
    "${advertising_service_path}:advertising_service",
    "${advertising_common_path}:advertising_common",
    "//third_party/libuv:uv_static",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  defines = [
    "Ad_LOG_TAG = \"AdvertisingFuzzTest\"",
    "LOG_DOMAIN = 0xD004704",
  ]
}
