# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//domains/advertising/advertising/advertising.gni")

cflags = [
  "-fdata-sections",
  "-ffunction-sections",
  "-fvisibility=hidden",
]

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${advertising_common_path}/ipc/include" ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = []
}

ohos_shared_library("cj_advertising_ffi") {
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "../../../../common/error_code",
    "../../../../common/log/include",
    "../../../../common/ipc/include",
    "../../../../common/model/include",
    "../../../../common/utils/include",
    "include",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  configs = [ ":native_module_config" ]

  sources = [
    "src/cj_advertising_common.cpp",
    "src/cj_advertising_ffi.cpp",
    "src/cj_advertising_impl.cpp",
    "src/cj_advertising_load_service.cpp",
  ]

  deps = [ "${advertising_common_path}:advertising_common" ]

  external_deps = [
    "ability_base:base",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ace_engine:ace_uicontent",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "advertising"
  part_name = "advertising"
}

ohos_prebuilt_etc("ad_service_config_json") {
  source = "resource/ad_service_config.json"
  relative_install_dir = "advertising/ads_framework"
  part_name = "advertising"
  subsystem_name = "advertising"
}
