# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/cloud/advertising/advertising.gni")
import("//build/ohos.gni")

cflags = []

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${advertising_common_path}/ipc/include"
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
  ]
}

ohos_shared_library("advertising") {
  include_dirs = [
    "${advertising_service_path}/ipc/include",
    "//domains/cloud/advertising/services/advertising_manager/include",
    "//domains/cloud/advertising/common/error_code",
    "//domains/cloud/advertising/common/log/include",
    "//domains/cloud/advertising/common/utils/include",
    "//domains/cloud/advertising/common/ipc/include",
    "//domains/cloud/advertising/common/model/include",
    "./include",
  ]

  configs = [ ":native_module_config"]

  sources = [
    "src/ad_init.cpp",
    "src/ad_load_napi_common.cpp",
    "src/advertising.cpp",
  ]

  deps = [
    "${advertising_service_path}:advertising_service",
    "${advertising_common_path}:advertising_common",
    "//third_party/libuv:uv_static",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "c_utils:utils",
    "config_policy:configpolicy_util"
  ]

  relative_install_dir = "module"
  subsystem_name = "cloud"
  part_name = "advertising"
}