# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")

es2abc_gen_abc("gen_adsservice_extension_abc") {
  src_js = rebase_path("adsservice_extension.js")
  dst_file = rebase_path(target_out_dir + "/adsservice_extension.abc")
  in_puts = [ "adsservice_extension.js" ]
  out_puts = [ target_out_dir + "/adsservice_extension.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("adsservice_extension_js") {
  input = "adsservice_extension.js"
  output = target_out_dir + "/adsservice_extension.o"
}

gen_js_obj("adsservice_extension_abc") {
  input = get_label_info(":gen_adsservice_extension_abc", "target_out_dir") +
          "/adsservice_extension.abc"
  output = target_out_dir + "/adsservice_extension_abc.o"
  dep = ":gen_adsservice_extension_abc"
}

ohos_shared_library("adsserviceextensionability_napi") {
  branch_protector_ret = "pac_ret"

  sources = [ "adsservice_extension_module.cpp" ]

  deps = [
    ":adsservice_extension_abc",
    ":adsservice_extension_js",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module/advertising"
  subsystem_name = "advertising"
  part_name = "advertising"
}
