# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
import("//build/ohos.gni")

es2abc_gen_abc("gen_adsservice_extension_context_abc") {
  src_js = rebase_path("adsservice_extension_context.js")
  dst_file = rebase_path(target_out_dir + "/adsservice_extension_context.abc")
  in_puts = [ "adsservice_extension_context.js" ]
  out_puts = [ target_out_dir + "/adsservice_extension_context.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("adsservice_extension_context_js") {
  input = "adsservice_extension_context.js"
  output = target_out_dir + "/adsservice_extension_context.o"
}

gen_js_obj("adsservice_extension_context_abc") {
  input = get_label_info(":gen_adsservice_extension_context_abc",
                         "target_out_dir") + "/adsservice_extension_context.abc"
  output = target_out_dir + "/adsservice_extension_context_abc.o"
  dep = ":gen_adsservice_extension_context_abc"
}

ohos_shared_library("adsserviceextensioncontext_napi") {
  branch_protector_ret = "pac_ret"

  sources = [ "adsservice_extension_context_module.cpp" ]

  deps = [
    ":adsservice_extension_context_abc",
    ":adsservice_extension_context_js",
  ]

  external_deps = [ "napi:ace_napi" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  relative_install_dir = "module/advertising"
  subsystem_name = "advertising"
  part_name = "advertising"
}
