# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")

es2abc_gen_abc("gen_autoadcomponent_abc") {
  src_js = rebase_path("autoadcomponent.js")
  dst_file = rebase_path(target_out_dir + "/autoadcomponent.abc")
  in_puts = [ "autoadcomponent.js" ]
  out_puts = [ target_out_dir + "/autoadcomponent.abc" ]
  extra_args = [ "--module" ]  
}

gen_js_obj("autoadcomponent_abc") {
  input = get_label_info(":gen_autoadcomponent_abc", "target_out_dir") + "/autoadcomponent.abc"
  output = target_out_dir + "/autoadcomponent_abc.o"
  dep = ":gen_autoadcomponent_abc"
}

ohos_shared_library("autoadcomponent") {
  sources = [ "autoadcomponent.cpp" ]

  deps = [ ":autoadcomponent_abc" ]

  external_deps = [ "napi:ace_napi" ]

  relative_install_dir = "module/cloud"
  subsystem_name = "cloud"
  part_name = "advertising"
}