# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//domains/advertising/advertising/advertising.gni")
import("//build/ohos.gni")
import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")

config("libadsservice_extension_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "./include"
  ]

  cflags = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
  ]
}

## Build libadsservice_extension.so
ohos_shared_library("libadsservice_extension") {
  sources = [
    "src/js_adsservice_extension.cpp",
    "src/js_adsservice_extension_context.cpp",
    "src/adsservice_extension.cpp",
    "src/adsservice_extension_context.cpp"
  ]

  configs = [
    ":libadsservice_extension_private_config"
  ]

  deps = [
  ]

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  include_dirs = [
    "./include",
    "//domains/advertising/advertising/common/log/include"
  ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "hilog:libhilog",
    "ipc:ipc_single",
    "ipc:ipc_core",
    "ipc:ipc_napi_common",
    "napi:ace_napi",
    "c_utils:utils"
  ]

  subsystem_name = "advertising"
  part_name = "advertising"
}

config("adsservice_extension_module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${ability_runtime_path}/interfaces/kits/native/ability/ability_runtime",
  ]
}

## Build libadsservice_extension_module.so
ohos_shared_library("adsservice_extension_module") {
  sources = [ "src/adsservice_extension_module_loader.cpp" ]

  configs = [ ":adsservice_extension_module_private_config"]

  deps = [
    ":libadsservice_extension"
  ]

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  include_dirs = [
    "./include",
    "//domains/advertising/advertising/common/log/include"
  ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:app_context",
    "ability_runtime:runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "c_utils:utils",
    "config_policy:configpolicy_util"
  ]

  relative_install_dir = "extensionability/"
  subsystem_name = "advertising"
  part_name = "advertising"
}